@@ -6,6 +6,8 @@ mesa (20.3.0-2) UNRELEASED; urgency=medium
   * rules: Enable gallium swrast (softpipe) and OSMesa everywhere, as
     they're not actually tied to llvm being available.
   * rules: Move common settings for !hurd to the top.
+  * rules: Use a better method to build the arrays of drivers, thanks
+    Witold Baryluk! (Closes: #972736)
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Dec 2020 09:03:41 +0200
 
